i have changed my html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 <li>Charles Kandira is a gentleman who lives in Nairobi Kenya.</li><br>
 <li>He stays At UMOJA INNERCORE living with both parents and he has siblings.</li><br>
-3.  Kandira is currently learning coding which he is being inspired by Imani and Elisha.<br>
-4.  Its a great learning experience for me.</p>
+<li> Kandira is currently learning coding k which he is being inspired by Imani and Elisha.</li><br>
 
   <h4><ul>Education<ul></h4>
 <li> study at Missions of Hope High School(GRADE 12)</li>
