--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Kandira's Portfolio</title>
   </head>
-  <body style="background-color:CadetBlue;">
+  <body style="background-color:Orange;">
 <h1>CHARLES KANDIRA</h1>
 
-<h2>A Music lover,A Friendly person,A Social person</h2>
+<h2>Smart,Crazy,loving</h2>
 
 <b>MY PHOTO</b>
 
@@ -17,17 +17,38 @@
 
 <p>
 
-<li>Charles Kandira is a gentleman who lives in Nairobi Kenya.</li><br>
-<li>He stays At UMOJA INNERCORE living with both parents and he has siblings.</li><br>
-<li> Kandira is currently learning coding k which he is being inspired by Imani and Elisha.</li><br>
+<li>My name is Charles Kandira</li><br>
+<li>I stay At UMOJA INNERCORE.</li><br>
+<li>Im still a student</li><br>
+<li>I got no occupation at the moment</li>
 
   <h4><ul>Education<ul></h4>
-<li> study at Missions of Hope High School(GRADE 12)</li>
-<li> I want to join Jomo Kenyatta University of Agriculture and Technology(JKUAT)</li>
-<ul>
-<h4>Hobbies</h4>
-<li>litsening to music</li>
-<li>watching movies</li>
+<li>Currently i study at Missions of Hope High School(GRADE 12)</li>
+<li>Currently studying coding with Imani and Elisha also My friends</li>
+<img src="school.jpg" alt="Music" width="400" height="500">
+
+
+
+
+
+
+
+<h4>Future Work Plans</h4>
+<li>Software engineering</li><br>
+<img src="code.jpg" alt="Music" width="600" height="500">
+
+
+<h5>Hobbies</h5>
+<li>Litsening to Music</li>
+<li>Gaming</li>
+<li>Playing soccer</li>
+<img src="xbox.webp" alt="Music" width="600" height="500">
+
+
+<h6>Music</h6>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/M6t47RI4bns" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 
   </body>
 </html>
