deleted gh pages

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li>Litsening to Music</li>
 <li>Gaming</li>
 <li>Playing soccer</li>
-<img src="xbox.webp" alt="Music" width="600" height="500">
+<img src="/kandira-coding-101/xbox.webp" alt="Music" width="600" height="500">
 
 
 <h6>Music</h6>
